source/tests/errors/interpolation_parens.apex
import os
x = 5
y = 3
os.output("Sum: {(x + y)}")